@@ -40,73 +40,60 @@ main(void)
      char *path = "04_lpxpak.tbz2";
      char *srcpath;
      
-     lpxpak_t *xpak1;
-     lpxpak_t *xpak2;
-     lpxpak_blob_t *blob1;
-     lpxpak_blob_t *blob2;
-     int fd;
+     lpxpak_t *xpak1 = NULL;
+     lpxpak_t *xpak2 = NULL;
+     lpxpak_blob_t *blob1 = NULL;
+     lpxpak_blob_t *blob2 = NULL;
+     int fd = 0;
 
-     if ( (srcpath = getenv("srcdir")) != NULL ) {
-          if ( chdir(srcpath) == -1 ) {
+     if ( (srcpath = getenv("srcdir")) != NULL )
+          if ( chdir(srcpath) == -1 )
                return EXIT_FAILURE;
-          }
-     }
 
      /* create initialize xpak objects */
      if ( (xpak1 = lpxpak_create()) == NULL )
-          return EXIT_FAILURE;
+          goto bailout;
 
-     if ( (xpak2 = lpxpak_create()) == NULL ) {
-          lpxpak_destroy(xpak1);
-          return EXIT_FAILURE;
-     }
+     if ( (xpak2 = lpxpak_create()) == NULL )
+          goto bailout;
 
      lpxpak_init(xpak1);
      lpxpak_init(xpak2);
      
      /* open the file read-only*/
      if ( (fd = open(path, O_RDONLY)) == -1 )
-          return EXIT_FAILURE;
+          goto bailout;
      
-     if ( lpxpak_parse_fd(xpak1, fd) == -1 ) {
-          close(fd);
-          return EXIT_FAILURE;
-     }
+     if ( lpxpak_parse_fd(xpak1, fd) == -1 )
+          goto bailout;
      if ( strcmp(xpak1->entries[0].name, "USE" ) != 0 ||
-         strcmp(xpak1->entries[22].name, "CFLAGS") != 0 ) {
-          lpxpak_destroy(xpak1);
-          return EXIT_FAILURE;
-     }
-     if ( (blob2 = lpxpak_blob_get_fd(fd)) == NULL ) {
-          lpxpak_destroy(xpak1);
-          return EXIT_FAILURE;
-     }
+         strcmp(xpak1->entries[22].name, "CFLAGS") != 0 )
+          goto bailout;
+     if ( (blob2 = lpxpak_blob_get_fd(fd)) == NULL )
+          goto bailout;
      close(fd);
-     if ( (blob1 = lpxpak_blob_compile(xpak1)) == NULL ) {
-          lpxpak_destroy(xpak1);
-          lpxpak_blob_destroy(blob2);
-          return EXIT_FAILURE;
-     }
-     if ( lpxpak_parse_data(xpak2, blob1) == -1 ) {
-          lpxpak_destroy(xpak1);
-          lpxpak_blob_destroy(blob2);
-          return EXIT_FAILURE;
-     }
+     fd = 0;
+     if ( (blob1 = lpxpak_blob_compile(xpak1)) == NULL )
+          goto bailout;
+     if ( lpxpak_parse_data(xpak2, blob1) == -1 )
+          goto bailout;
      if ( blob1->len == blob2->len) {
-          if ( memcmp(blob1->data, blob2->data, blob1->len) != 0 ) {
-               lpxpak_destroy(xpak1);
-               lpxpak_destroy(xpak2);
-               lpxpak_blob_destroy(blob1);
-               lpxpak_blob_destroy(blob2);
-               return EXIT_FAILURE;
-          }
-     } else {
-          return EXIT_FAILURE;
-     }
+          if ( memcmp(blob1->data, blob2->data, blob1->len) != 0 )
+               goto bailout;
+     } else
+          goto bailout;
 
      lpxpak_destroy(xpak1);
      lpxpak_destroy(xpak2);
      lpxpak_blob_destroy(blob1);
      lpxpak_blob_destroy(blob2);
      return EXIT_SUCCESS;
+
+bailout:
+     if (fd && fd != -1)
+          close(fd);
+     lpxpak_destroy(xpak1);
+     lpxpak_destroy(xpak2);
+     lpxpak_blob_destroy(blob1);
+     lpxpak_blob_destroy(blob2);
 }
